--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,23 @@
 ehthumbs.db
 Thumbs.db
 .vscode
+
+# dependencies
+/frontend/node_modules
+/frontend/.pnp
+/frontend/.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
