--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,21 @@
 version: "3"
 services:
+  frontend:
+    build: ./frontend/
+    container_name: frontend
+    restart: always
+    ports:
+      - 3000:3000
+    depends_on:
+      - backend
+    links:
+      - backend
+    stdin_open: true
+    tty: true
+
   backend:
     build: ./backend/
+    container_name: game_recommendation_backend
     restart: always
     command: "python3 ./run_server.py"
     ports:
@@ -13,9 +27,10 @@ services:
 
   mysql:
     build: ./database/
+    container_name: game_recommendation_database
     restart: always
     environment:
       MYSQL_DATABASE: 'games_db'
       MYSQL_ROOT_PASSWORD: 'root'
     ports:
-      - '3306:3306'
+      - 3306:3306
