--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,8 @@ services:
     links:
       - mysql
     depends_on:
-      - mysql
+      mysql:
+        condition: "service_healthy"
 
   mysql:
     build: ./database/
@@ -34,3 +35,7 @@ services:
       MYSQL_ROOT_PASSWORD: 'root'
     ports:
       - 3306:3306
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
