--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,13 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
+    "framer-motion": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-uuid": "^2.0.0"  
+    "react-scroll": "^1.8.9",
+    "react-uuid": "^2.0.0",
+    "sass": "^1.57.1"
   },
   "scripts": {
     "start": "react-scripts start",
